--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -2,7 +2,7 @@ blank_issues_enabled: false
 contact_links:
   - name: Aevoa Studios Moderative Help
     url: https://aevoa.tech/
-    about: Please create a ticket here if you need help with the GmodStore platform
+    about: Please create a ticket here if you need help with the platform
   - name: Luxaite-Network Community Discord
     url: https://discord.gg/S82Ekb3vHq
     about: For any other questions
